[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/GameDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/DialogManager.gd" type="Script" id=2]
[ext_resource path="res://asset/ui-theme.tres" type="Theme" id=3]
[ext_resource path="res://src/GameOver.tscn" type="PackedScene" id=4]

[sub_resource type="GDScript" id=3]
script/source = "extends Node


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="DialogManager" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -43.0
margin_right = 81.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 70, 35 )
rect_clip_content = true
theme = ExtResource( 3 )

[node name="Dialog" type="Control" parent="PopupDialog"]
visible = false
theme = ExtResource( 3 )
script = SubResource( 3 )

[node name="LevelComplete" parent="PopupDialog/Dialog" instance=ExtResource( 1 )]

[node name="ItLooksLikeUrStuck" parent="PopupDialog/Dialog" instance=ExtResource( 1 )]
text = "It looks like you're stuck!"

[node name="DialogContainer" parent="PopupDialog" instance=ExtResource( 1 )]
margin_bottom = 51.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 0.666667, 1 )
text = "This is placeholder text."

[node name="GameOver" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="popup_hide" from="PopupDialog" to="." method="_on_popup_hidden"]
